--- a/.github/workflows/Plot_Github_Action.yml
+++ b/.github/workflows/Plot_Github_Action.yml
@@ -30,8 +30,8 @@ jobs:
 
     - name: Save Plots as Artifacts
       run:
-          Assignments/Daniya_Assignment_3.6_Plot_in_Github_Action/plot_test_size_0.2.png
-          Assignments/Daniya_Assignment_3.6_Plot_in_Github_Action/plot_test_size_0.3.png
-          Assignments/Daniya_Assignment_3.6_Plot_in_Github_Action/plot_test_size_0.4.png
+         display Assignments/Daniya_Assignment_3.6_Plot_in_Github_Action/plot_test_size_0.2.png
+         display Assignments/Daniya_Assignment_3.6_Plot_in_Github_Action/plot_test_size_0.3.png
+         display Assignments/Daniya_Assignment_3.6_Plot_in_Github_Action/plot_test_size_0.4.png
 
   
